added  a sign-up page

--- a/Login_page.html
+++ b/Login_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>console.log("Hello, World");</script>
     <title>Welcome!</title>
     <link rel="stylesheet" href="styles/Login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,7 @@
       <img class="coffee-bot-logo" src="assets/CoffeeBot_Logo.png" alt="CoffeeBot">
       <div class="title">Bean<span style="color: #87431D;">Bot</span></div>
       <div class="subtitle">Robot Coffee Delivery</div>
-      <button class="login-button">Login</button>
+      <button>Login</button>
     </div>
     <div class="sign-up-link">Don't have an account? Sign up <a href="">here</a></Div>
     
