changed images links

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <div class="design-circle"></div>
-      <img src="assets/coffee-break.png 1.png" alt="">
+      <img src="https://github.com/Electronic-mind/BeanBot/blob/main/assets/coffee-break.png%201.png?raw=true" alt="">
     </div>
     <div class="input-box-container">
       <h1 class="title">Sign up</h1>
