--- a/Login_page.html
+++ b/Login_page.html
@@ -11,7 +11,7 @@
   <body>
     <div class="welcome-statement">Welcome</div>
     <div class="coffee-bot-container">
-      <img class="coffee-bot-logo" src="https://github.com/Electronic-mind/BeanBot/blob/main/assets/CoffeeBot_Logo.png" alt="CoffeeBot">
+      <img class="coffee-bot-logo" src="assets/CoffeeBot_Logo.png" alt="CoffeeBot">
       <div class="title">Bean<span style="color: #87431D;">Bot</span></div>
       <div class="subtitle">Robot Coffee Delivery</div>
       <button>Login</button>
